deploy/kubernetes/examples/nginx/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mhserveremu
  namespace: mhserveremu
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: mhserveremu.localdev
      allowedRoutes:
        namespaces:
          from: Same
    - name: http-static
      protocol: HTTP
      port: 80
      hostname: static.mhserveremu.localdev
      allowedRoutes:
        namespaces:
          from: Same
