deploy/kubernetes/examples/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mhserveremu
  namespace: mhserveremu
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: mhserveremu.localdev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mhserveremu
                port:
                  number: 8080
    - host: static.mhserveremu.localdev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mhserveremu-static
                port:
                  number: 80
